fix: spacing fixes

--- a/sites/public/styles/overrides.scss
+++ b/sites/public/styles/overrides.scss
@@ -2,10 +2,15 @@
   .seeds-button {
     -webkit-font-smoothing: antialiased; // restore macOS styling that had been unset
   }
-  
+
   --text-caps-spaced-letter-spacing: var(--bloom-letter-spacing-tight);
   --text-caps-spaced-font-weight: 700;
   .text__caps-spaced {
     text-transform: none;
+    color: var(--seeds-color-gray-750);
+  }
+
+  .progress-nav {
+    --dot-font-size: var(--seeds-type-caption-size);
   }
 }
